5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1637_1053.log
== TEST (2019-04-09 10:48:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = (input "Digite o nome do patrono:")
if (nome==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print (mensagem)	
  
-- ERROR:
File "XXXX", line 4
    nome = (input "Digite o nome do patrono:")
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:49:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input "Digite o nome do patrono:"
if (nome==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono do Harry Potter"
print (mensagem)	
  
-- ERROR:
File "XXXX", line 4
    nome = input "Digite o nome do patrono:"
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:50:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = (input "Digite o nome do patrono:")
#if (nome==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
#else:
	mensagem = "nao eh patrono do Harry Potter"
#print (mensagem)	
  
-- ERROR:
File "XXXX", line 4
    nome = (input "Digite o nome do patrono:")
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = (input "Digite o nome do patrono:")
#if (nome==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
#else:
	mensagem = "nao eh patrono do Harry Potter"
#print (mensagem)	
  
-- ERROR:
File "XXXX", line 4
    nome = (input "Digite o nome do patrono:")
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome do patrono:")
if (nome==cervo):
	 mensagem = "eh patrono do Harry Potter"
else:
	 mensagem = "nao eh patrono do Harry Potter"
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome do patrono:")
if (nome==cervo):
	 mensagem = "eh patrono do Harry Potter"
else:
	 mensagem = "nao eh patrono do Harry Potter"
print(mensagem)		
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome do patrono:")
if (nome == cervo):
	 mensagem = "eh patrono do Harry Potter"
else:
	 mensagem = "nao eh patrono do Harry Potter"
print(mensagem)		
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:09:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome do patrono:")
if (nome == "cervo"):
	 mensagem = "eh patrono do Harry Potter"
else:
	 mensagem = "nao eh patrono do Harry Potter"
print(nome,mensagem)		
 
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:10:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("digite o nome do patrono:")
if (nome == "cervo"):
	 mensagem = "eh patrono do Harry Potter"
else:
	 mensagem = "nao eh patrono do Harry Potter"
print(nome,mensagem)		
 
-- EXECUTION TIME:
0.118319
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
